--- a/staylepage.css
+++ b/staylepage.css
@@ -6,8 +6,10 @@
 }
 body
 {
- background-image: url("./imag/de0f4bf6e8075312a6eb20ad7044571a.jpg");
+ /* background-image: url("./imag/de0f4bf6e8075312a6eb20ad7044571a.jpg");*/
 background-size: cover;
+margin: 0;
+padding: 0;
 
 }
 
@@ -73,25 +75,43 @@ font-size: 20px;
     display: block;
 }
 
+.ooo 
+{
+    border: 2px solid red;
+    width: 100%;
+    height: 25%;
+    margin-top: 30px;
+    text-align: center;
+
+}
+
 .page2{
     display: grid;
-       grid-template-columns: 400px 400px 400px; 
-       grid-template-rows: 450px 450px 450px; 
-       margin-left:150px ;
+       grid-template-columns: 330px 330px 330px; 
+       grid-template-rows: 370px 370px 370px; 
+       margin-left:200px ;
+       margin-top: 40px;
+       height: 0;
 
     
 }
 .page2 > div
 {
     margin-left:50px ;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 
     border: 2px solid black;
 }
-.cardCar > div img 
+.page2 > div img 
 {
     width: 100%;
     height: 50%;
+}
+
+.info p , .info h1
+{
+    margin: 10px;
+    padding: 10px;
 }
 
 
