--- a/staylepage.css
+++ b/staylepage.css
@@ -6,7 +6,7 @@
 }
 body
 {
- /* background-image: url("./imag/de0f4bf6e8075312a6eb20ad7044571a.jpg");*/
+  /* background-image: url("./imag/de0f4bf6e8075312a6eb20ad7044571a.jpg"); */
 background-size: cover;
 margin: 0;
 padding: 0;
@@ -21,15 +21,17 @@ padding: 0;
 
 .page1 .navbar 
 {
-    background-color:cadetblue;
-    opacity: 0.5;
     overflow: hidden;  
+    background-color: #9BB9BF;
+    width: 90%;
+    margin: auto;
 
 
 }
 .page1 .navbar h2
 {
     float: left;
+    color: #1A0101;
 }
 
 
@@ -40,12 +42,14 @@ padding-left: 0;
 overflow: hidden;
 float: right;
 font-size: 20px;
+
 }
 .navbar ul li
 {
     padding-left: 15px;
     float:left;
     display:inline-block;
+    color: #1A0101;
 }
 
 .slaider 
@@ -54,11 +58,11 @@ font-size: 20px;
     height: 100%;
     margin-top: 200px;
     margin-left: 10px;
-    border: 1px solid #F5F5F5 ;
     overflow: 0.5;
     width:50%;
     padding: 10px;
     text-align: center;
+    color: #1A0101;
 
     
 }
@@ -75,33 +79,64 @@ font-size: 20px;
     display: block;
 }
 
-.ooo 
-{
-    border: 2px solid red;
-    width: 100%;
-    height: 25%;
-    margin-top: 30px;
-    text-align: center;
-
+.imaSla {
+    display: flex;
 }
+
+.imaSla .slaider
+{
+    width: 60%;
+}
+.imaSla .imag {
+    width: 30%;
+    margin-left: 30px;
+}
+
+.imaSla .imag img 
+{
+    
+width: 80%;
+border-radius: 20px ;
+margin-top: 100px;
+}
+
+.buton {
+    margin-left: 28%;
+    margin-top: 3%;
+}
+.buton #carShow {
+    background-color:#9BB9BF ;
+    cursor: pointer;
+    padding: 10px;
+    border: 1px solid  #4C6C73;
+    width: 150px;
+    border-radius: 10px;
+    color: #1A0101;
+    text-align: center;
+    font-size: large; 
+}
+.buton #carShow:hover {
+    opacity: 0.9;
+    background-color: #9BB9BF;
+}
+
 
 .page2{
     display: grid;
-       grid-template-columns: 330px 330px 330px; 
-       grid-template-rows: 370px 370px 370px; 
+       grid-template-columns: 370px 370px 370px; 
+       grid-template-rows: 400px 400px 400px; 
        margin-left:200px ;
        margin-top: 40px;
-       height: 0;
 
     
 }
-.page2 > div
-{
+.ch {
     margin-left:50px ;
     margin-bottom: 20px;
-
     border: 2px solid black;
+    margin-top: 5%;
 }
+
 .page2 > div img 
 {
     width: 100%;
