--- a/staylepage.css
+++ b/staylepage.css
@@ -188,6 +188,8 @@ margin-top: 100px;
     color: #F5F9FC;
     padding: 5px;
     font-size: 15px;
+    cursor: pointer;
+
 
 }
 
@@ -195,10 +197,16 @@ margin-top: 100px;
 {
     font-size: 15px;
     color: #F5F9FC;
+    cursor: pointer;
+
 
 }
 
 /*start slaider imag */
+
+.slider-outer {
+    margin: 50px 0 30px 0;
+}
 
 .slider-inner 
 {
