--- a/staylepage.css
+++ b/staylepage.css
@@ -11,6 +11,7 @@ background-size: cover;
 margin: 0;
 padding: 0;
 
+
 }
 
 .page1 
@@ -32,8 +33,15 @@ padding: 0;
 {
     float: left;
     color: #FFFFFF;
+    border: 1px solid #0388A6;
+    padding: 5px;
+    border-radius: 10px 10px;
+    text-transform: capitalize;
+    
 }
-
+.page1 .navbar h2 span {
+    color: firebrick;
+}
 
 .navbar ul 
 {
@@ -51,8 +59,15 @@ font-size: 20px;
     display:inline-block;
     color: #FFFFFF;
     cursor: pointer;
+    text-transform: capitalize;
 
 }
+
+.navbar ul li:hover
+{
+    color: firebrick;
+}
+
 
 .slaider 
 {
@@ -95,6 +110,15 @@ font-size: 20px;
 {
     width: 60%;
 }
+
+.imaSla .slaider p
+{
+    font-weight: bold;
+}
+.imaSla .slaider p span
+{
+    color: firebrick;
+}
 .imaSla .imag {
     width: 30%;
     margin-left: 50px;
@@ -122,6 +146,8 @@ margin-top: 100px;
     color: #F5F9FC;
     text-align: center;
     font-size: large; 
+    text-transform: capitalize;
+
 }
 .buton #carShow:hover {
     opacity: 0.9;
@@ -151,15 +177,13 @@ margin-top: 100px;
     height: 50%;
 }
 
-.info {
 
-
-}
 
 .info p , .info h1
 {
     margin: 5px 0 0 10px;
     color:#1A2241 ;
+    text-transform: lowercase;
 }
 
 .info button {
@@ -173,7 +197,14 @@ margin-top: 100px;
     border-radius: 10px;
     color: #F5F9FC;
     text-align: center;
+    text-transform: capitalize;
 
+
+}
+
+.info button:hover 
+{
+    opacity: 0.9;
 }
 
 .select 
@@ -189,6 +220,8 @@ margin-top: 100px;
     padding: 5px;
     font-size: 15px;
     cursor: pointer;
+    text-transform: capitalize;
+
 
 
 }
@@ -198,6 +231,8 @@ margin-top: 100px;
     font-size: 15px;
     color: #F5F9FC;
     cursor: pointer;
+    text-transform: capitalize;
+
 
 
 }
@@ -219,7 +254,7 @@ margin-top: 100px;
 
 .slider-inner img
 {
-    width: 500px;
+    width: 600px;
     height: 400px;
     display: none;
 }
@@ -244,7 +279,7 @@ margin-top: 100px;
     float: right;
     position: relative;
     bottom: 352px;
-    right: 500px;
+    right: 400px;
 
 
 }
