--- a/staylepage.css
+++ b/staylepage.css
@@ -373,12 +373,43 @@ font-weight: bold;
     box-sizing: border-box;
   }
   
-
-
-  
-
-
 /* end  page3 */
+/* start page4  */
+.page4 {
+
+    margin: 50px 0 0 50px;
+
+}
+
+.page4  input[type=text] {
+    width: 50%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    display: inline-block;
+    border: none;
+    background: #f1f1f1; 
+}
+
+.page4 .label {
+    display: block;
+    color: #F20544;
+}
+
+.page4 button {
+    background-color:#1A2241 ;
+    cursor: pointer;
+    padding: 10px;
+    margin: 10px 0 0 5px;
+    border: 1px solid  #77A0EE;
+    width: 150px;
+    border-radius: 10px;
+    color: #F5F9FC;
+    text-align: center;
+    text-transform: capitalize;
+    display: block;
+} 
+
+/* end page4*/ 
 
  
 
