--- a/staylepage.css
+++ b/staylepage.css
@@ -446,9 +446,12 @@ color: #1A2241;
     float: left;
     color: fff;
     border: 1px solid #0388A6;
-    padding: 3px 15px 3px 15px;
+    padding: 3px 10px 3px 15px;
     border-radius: 10px 10px;
-    text-transform: capitalize;}
+    text-transform: capitalize;
+    font-size: 18px;
+}
+
 
     
 
@@ -458,12 +461,12 @@ color: #1A2241;
 
  .navbar ul {
  
- list-style-type: none;
- padding-left: 0;
- overflow: hidden;
- float: right;
- font-size: 15px;
- margin-top: 30px;}
+    list-style-type: none;
+    padding-left: 0;
+    overflow: hidden;
+    float: right;
+    font-size: 13px;
+    margin: 20px 30px 5px 5px;}
 
 
  .navbar ul li{
@@ -521,12 +524,19 @@ color: #1A2241;
 
 
    .imaSla {
-    display: flex;}
+    display: flex;
+   flex-direction: column-reverse;
+}
 
 
    .imaSla .slaider{
 
-    width: 60%;}
+    width: 70%;
+    height: 100px;
+    position: relative;
+    bottom: 200px;
+    margin-left: 40px;
+}
 
 
  .imaSla .slaider p
@@ -539,8 +549,11 @@ color: #1A2241;
    
  }
  .imaSla .imag {
-    width: 40%;
-    margin: 100px 0 0 50px;
+    width: 60%;
+    margin: auto;
+    margin: au;
+    position: relative;
+    bottom: 50px;
 
  }
 
@@ -567,21 +580,20 @@ color: #1A2241;
     font-size: 15px;
     text-transform: capitalize;
     position: relative;
-    right: 70px;
-    bottom: 30px;
+    bottom: 0;
+    margin-left: 40px;
 
-
-}
-.buton #carShow:hover {
+ }
+ .buton #carShow:hover {
     opacity: 0.9;
-}
+ }
 
 
 .page2{
     display: grid;
-    grid-template-columns: 330px 330px;
-    grid-template-rows: 380px 380px;
-    margin: 0px 0 0 30px;
+    grid-template-columns: 300px 300px;
+    grid-template-rows: 340px 340px;
+    margin: auto;
 }
 .ch {
     margin-left:50px ;
@@ -656,9 +668,10 @@ color: #1A2241;
 .select #addCar {
     background-color: #202126;
     cursor: pointer;
-    padding: 8px 15px;
+    padding: 0;
     margin: 10px 0 0 5px;
-    width: 140px;
+    width: 100px;
+    height: 30px;
     border-radius: 10px;
     color: #F5F9FC;
     text-align: center;
@@ -701,9 +714,6 @@ color: #1A2241;
 }
 
 
-
-
-
 #imag {
     height: 60px;
     width: 52px;
@@ -720,7 +730,7 @@ color: #1A2241;
  .page3 
  {
     display: flex;
-    margin: 5% 0 0 5%;
+    margin: 5% 0 0 2%;
  }
 
 
@@ -734,18 +744,24 @@ color: #1A2241;
 
  }
 
- .register  , .login
+ .register  
  {
     width: 50%;
     margin-left: 20px;
  }
 
+ .register b {
+     display: block;
+     font-size: 12px;
+ }
+
  .register input[type=text] {
-    width: 92%;
+    width: 86%;
     padding: 10px;
-    margin: 5px 0 20px 0;
+    margin: 0 0 16px 10;
     display: inline-block;
     border: none;
+    margin: 0;
     background: #f1f1f1;
   }
 
@@ -780,14 +796,7 @@ color: #1A2241;
 
   }
 
-  .login input[type=text], input[type=password] {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-  }
+  
   
   /* start page4  */
 .page4 {
@@ -797,7 +806,7 @@ color: #1A2241;
 }
 
 .page4  input[type=text] {
-    width: 90%;
+    width: 83%;
     padding: 15px;
     margin: 5px 0 22px 0;
     display: inline-block;
@@ -1232,7 +1241,7 @@ color: #1A2241;
 }
 
 .page4  input[type=text] {
-    width: 85%;
+    width: 75%;
     padding: 15px;
     margin: 5px 0 22px 0;
     display: inline-block;
